--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,11 +1,50 @@
 ---
 
 - hosts: prometheus
+  tasks:
+    - name: Enable 443
+      ufw:
+        rule: allow
+        port: https
+    - name: Enable 80
+      ufw:
+        rule: allow
+        port: http
+
   roles:
   - ansible-prometheus
   - ansible-grafana
+  - ansible-letsencrypt
+  - ansible-nginx
 
   vars:
+    letsencrypt_webroot_path: /var/www
+    letsencrypt_email: letsencrypt@cedi.dev
+    letsencrypt_renewal_command_args: '--renew-hook "systemctl restart nginx"'
+    letsencrypt_cert_domains:
+    - "{{ ansible_host }}"
+    nginx_vhosts:
+      - listen: "80"
+        server_name: "{{ ansible_host }} www.{{ ansible_host }}"
+        filename: "{{ ansible_host }}.80.conf"
+        return: "301 https://$host$request_uri"
+        state: "present"
+
+      - listen: "443 ssl http2"
+        server_name: "{{ ansible_host }}"
+        state: "present"
+        enable_ssl: true
+        extra_parameters: |
+          location / {
+            proxy_pass http://prometheus.open-infrastructure.de:3000;
+          }
+          proxy_redirect http://prometheus.open-infrastructure.de:3000 https://prometheus.open-infrastructure.de;
+
+    nginx_ssl_trusted_certificate: "/etc/letsencrypt/live/{{ ansible_host }}/chain.pem"
+    nginx_ssl_certificate: "/etc/letsencrypt/live/{{ ansible_host }}/fullchain.pem"
+    nginx_ssl_certificate_key: "/etc/letsencrypt/live/{{ ansible_host }}/privkey.pem"
+    nginx_tls_acme_challenge_root_location: "/var/lib/letsencrypt/"
+
     prometheus_web_external_url: "http://prometheus.open-infrastructure.de"
     prometheus_targets:
       node:
