--- a/inventory.yml
+++ b/inventory.yml
@@ -3,6 +3,9 @@ all:
     prometheus:
       ansible_host: prometheus.open-infrastructure.de
       ansible_user: root
+    zammad:
+      ansible_host: tickets.open-infrastructure.de
+      ansible_user: root
   children:
     ipsec_gateways:
       hosts:
@@ -32,6 +35,9 @@ all:
               ansible_user: root
             de-fsn-2:
               ansible_host: de-fsn-2.jitsi.rocks
+              ansible_user: root
+            de-fsn-3:
+              ansible_host: de-fsn-3.jitsi.rocks
               ansible_user: root
             de-nue-1:
               ansible_host: de-nue-1.jitsi.rocks
