--- a/prometheus.yml
+++ b/prometheus.yml
@@ -55,6 +55,7 @@
         - de-wob-1.jitsi.rocks:9100
         - de-fsn-1.jitsi.rocks:9100
         - de-fsn-2.jitsi.rocks:9100
+        - de-fsn-3.jitsi.rocks:9100
         - de-nue-1.jitsi.rocks:9100
         - de-nue-2.jitsi.rocks:9100
         - fi-hel-2.jitsi.rocks:9100
