--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "roles/ansible-letsencrypt"]
 	path = roles/ansible-letsencrypt
 	url = git@github.com:open-infrastructure/ansible-letsencrypt.git
+[submodule "roles/ansible-blackbox-exporter"]
+	path = roles/ansible-blackbox-exporter
+	url = git@github.com:cloudalchemy/ansible-blackbox-exporter.git
