--- a/main.yml
+++ b/main.yml
@@ -3,17 +3,14 @@
 - name: Call base playbook
   import_playbook: ./base.yml
 
-- name: Call jitsi monitoring playbook
-  import_playbook: ./jitsi_monitoring.yml
+- name: Call jitsi playbook
+  import_playbook: ./jitsi.yml
 
 - name: Call ipsec gateway playbook
   import_playbook: ./ipsec_gateway.yml
 
 - name: Call prometheus playbook
   import_playbook: ./prometheus.yml
-
-- name: Call zammad playbook
-  import_playbook: ./zammad.yml
 
 
 
