--- a/inventory.yml
+++ b/inventory.yml
@@ -12,6 +12,14 @@ all:
       ansible_host: tickets.open-infrastructure.de
       ansible_user: root
 
+    auth:
+      ansible_host: auth.open-infrastructure.de
+      ansible_user: root
+
+    sso:
+      ansible_host: sso.open-infrastructure.de
+      ansible_user: root
+
   children:
     ipsec_gateways:
       hosts:
@@ -44,9 +52,6 @@ all:
               ansible_user: root
             de-fsn-2:
               ansible_host: de-fsn-2.jitsi.rocks
-              ansible_user: root
-            de-fsn-3:
-              ansible_host: de-fsn-3.jitsi.rocks
               ansible_user: root
             de-nue-1:
               ansible_host: de-nue-1.jitsi.rocks
