--- a/vars/prometheus_letsencrypt.yml
+++ b/vars/prometheus_letsencrypt.yml
@@ -1,5 +1,5 @@
 letsencrypt_webroot_path: /var/www
-letsencrypt_email: letsencrypt@open-infrastructure.de
+letsencrypt_email: letsencrypt+prometheus@open-infrastructure.de
 letsencrypt_renewal_command_args: '--renew-hook "systemctl restart nginx"'
 letsencrypt_cert_domains:
 - "prometheus.open-infrastructure.de"
