--- a/inventory/devops.yml
+++ b/inventory/devops.yml
@@ -1,18 +1,23 @@
 all:
-  hosts:
-    prometheus:
-      ansible_host: prometheus.open-infrastructure.de
-      ansible_user: root
+  children:
+    devops:
+      hosts:
+        zammad:
+          ansible_host: tickets.open-infrastructure.de
+          ansible_user: root
 
-    monitor:
-      ansible_host: monitor.open-infrastructure.de
-      ansible_user: root
+        auth:
+          ansible_host: auth.open-infrastructure.de
+          ansible_user: root
 
-    zammad:
-      ansible_host: tickets.open-infrastructure.de
-      ansible_user: root
+      children:
+        monitoring:
+          hosts:
+            prometheus:
+              ansible_host: prometheus.open-infrastructure.de
+              ansible_user: root
 
-    auth:
-      ansible_host: auth.open-infrastructure.de
-      ansible_user: root
+            monitor:
+              ansible_host: monitor.open-infrastructure.de
+              ansible_user: root
 
