--- a/inventory/jitsirocks.yml
+++ b/inventory/jitsirocks.yml
@@ -12,7 +12,7 @@ all:
     jitsi_dev:
       hosts:
         jitsidev:
-          ansible_host: jitsidev2.jitsi.rocks
+          ansible_host: meetdev.jitsi.rocks
           ansible_user: root
 
     jitsi:
