--- a/vars/users.yml
+++ b/vars/users.yml
@@ -7,6 +7,7 @@ base_system_users:
     groups:
       - sudo
       - docker
+      - wheel
     public_keys: https://github.com/cedi.keys
     dotfiles: https://github.com/cedi/dotfiles.git
     nvim: https://github.com/cedi/vim-config.git
@@ -17,4 +18,5 @@ base_system_users:
     groups:
       - sudo
       - docker
+      - wheel
     public_keys: https://github.com/td00.keys
